yume-2.8.5 (not yet released):
- Remove uneeded debugging messages.

yume-2.8.4:
- Fix a bug when checking if a package is available before installation.
- Improve the management of the verbose mode, we can really use the verbose
option or the env variable, and have the same behavior.
- Fix a problem in the return code catching in ptty_try.

yume-2.8.3:
- Extend ptty_try so we can catch the return code of executed commands and
return it back to the user (therefore PackMan can catch errors). Contribution
to close [Ticket #509].
- Extend yume so we can catch errors from yum. Contribution to close [Ticket
#509].
- Add a framework for unit tests + some basic unit tests.
- [Ticket #452] Yume now returns an error code when we try to install a
package that is not available.

yume-2.8.2:
- add a "deb" target to the Makefile (needed by oscar-packager).
- fix the "make dist" command.

yume-2.8.1:
- improve the man page (by adding examples).
- slightly improve the Makefile.
- add a separate ChangeLog file that could be used both with RPM and Debian
packages

yume-2.8:
- added master recognition for failover case (heartbeat version).

yume-2.7:
- fix a bad handling of the return code.
- added repoadd, repodel, repolist repository manipulation funtionality for
OSCAR headnodes.

yume-2.6:
- certain yum versions are too chatty, fixed version detection

yume-2.5:
- fixed repoquery for newer yum versions

yume-2.3:
- Improved scalability by dealing with timeouts when calling distro-query
- More detailed errors

yume-2.2:
- fixed problem with yume invocation on SUSE clients
- suse_bootstrap support for installing into empty suse images
- including yum-repoquery and removing dependency of yum-utils.
- added rpm groups support (e.g. yume install @eclipse)
- added repoquery support (--repoquery)
- moved ptty_try log file to /tmp, cleaning it up at interruption
- added mirror:http://mirrorlist_url/ option handling
- significantly improved functionality of yume-opkg